web-infras/parser/tests/fixtures/self-added/scope/dup-fun-name-in-module/output.txt
[SyntaxError]: Identifier has already been declared. (5,1)
5|function foo() {
 |^
